Make the state a record

--- a/AvaloniaFableStore/AvaloniaFableStore.fsproj
+++ b/AvaloniaFableStore/AvaloniaFableStore.fsproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Include="Controls.fs" />
+    <Compile Include="State.fs" />
     <Compile Include="Counter.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
