--- a/AvaloniaFableStore/AvaloniaFableStore.fsproj
+++ b/AvaloniaFableStore/AvaloniaFableStore.fsproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Localization.fs" />
+    <Compile Include="LayoutUtils.fs" />
     <Compile Include="Controls.fs" />
     <Compile Include="State.fs" />
     <Compile Include="Counter.fs" />
@@ -16,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="Avalonia.Desktop" Version="0.10.6" />
     <PackageReference Include="Fable.SvelteStore" Version="1.0.0-beta-007" />
+    <PackageReference Include="FSharp.Control.Reactive" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
