--- a/CounterApp/CounterApp.fsproj
+++ b/CounterApp/CounterApp.fsproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Desktop" Version="0.10.6" />
-    <PackageReference Include="Fable.SvelteStore" Version="1.0.0-beta-007" />
+    <PackageReference Include="Fable.Store" Version="1.0.0-beta-005" />
     <PackageReference Include="FSharp.Control.Reactive" Version="5.0.2" />
   </ItemGroup>
 
