--- a/CounterApp/CounterApp.fsproj
+++ b/CounterApp/CounterApp.fsproj
@@ -8,8 +8,7 @@
 
   <ItemGroup>
     <Compile Include="Localization.fs" />
-    <Compile Include="LayoutUtils.fs" />
-    <Compile Include="Controls.fs" />
+    <Compile Include="CustomControls.fs" />
     <Compile Include="State.fs" />
     <Compile Include="Counter.fs" />
     <Compile Include="Program.fs" />
@@ -19,6 +18,10 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.6" />
     <PackageReference Include="Fable.Store" Version="1.0.0-beta-005" />
     <PackageReference Include="FSharp.Control.Reactive" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharedLibrary\SharedLibrary.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
